add tags for articles blog

--- a/data/blog/pourquoi-pas-une-progressive-web-app.mdx
+++ b/data/blog/pourquoi-pas-une-progressive-web-app.mdx
@@ -4,6 +4,7 @@ publishedAt: '31/01/2017'
 updatedAt: '28/06/2018'
 summary: 'exemple'
 image: /uploads/Progressive-Web-App.jpeg
+tags: ['Progressive Web App', 'Web Application']
 ---
 
 ## Combien de Startups "ambitieuses" basent leurs business sur des applications révolutionnaires ?
